k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudless-manager
  namespace: cloudless
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`manage.cloudless.online`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: cloudless
        - name: secure-headers
          namespace: cloudless
      services:
        - name: oauth2-proxy
          port: 4180
  tls:
    certResolver: letsencrypt
